Fix objectMapper issue